<resources>
    <string name="app_name" translatable="false"><b>Bead Me</b></string>
    <string name="app_id">1542680726054510</string>
    <string name="debbuggable">true</string>
    <string name="action_settings">App Icon</string>
    <string name="img_desc">Game Image</string>
    <string name="roboto_name"><b>Mr. Roboto</b></string>
    <string name="roboto_desc"><b>You\'re wondering who I am. Machine or mannequin? My heart is human, my blood is boiling, my brain belongs to Tati. Domo arigato, Mr. Roboto.</b></string>
    <string name="roboto_winner"><b>Domo arigato Mr. Roboto, we know you are in control</b></string>
    <string name="s0x0">Action performed successfully.</string>
    <string name="e0x1">Number of players out of bound.</string>
    <string name="e0x2">You cannot move this bar to the new position.</string>
    <string name="e0x3">You cannot move this bar because it was moved in the previous round by one of your opponents.</string>
    <string name="e0x4">You cannot move this bar because it was moved in one of your two previous consecutive turns.</string>
    <string name="e0x5">You cannot move twice in a row.</string>
    <string name="e0x6">You cannot place the bead in this position.</string>
    <string name="e0x7">You cannot move this bead because is already placed.</string>
    <string name="e0x8">The bead must be placed inside the board.</string>
    <string name="welcome">Welcome back. We\'ve missed you.</string>
    <string name="txt_home_text_pink"><b>be cool, but also be warm</b></string>
    <string name="txt_home_text_starwars"><b>if you only knew the power of the darkside</b></string>
    <string name="txt_home_text_harrypotter"><b>don\'t let the muggles get you down</b></string>
    <string name="btn_play_text">PLAY</string>
    <string name="btn_settings_text">SETTINGS</string>
    <string name="btn_statistics_text">STATISTICS</string>
    <string name="btn_history_text">HISTORY</string>
    <string name="santa_name"><b>Santa</b></string>
    <string name="santa_desc"><b>A.K.A Kris Kringle, pick him only if you have been a nice boy!</b></string>
    <string name="mermaid_name"><b>Little Mermaid</b></string>
    <string name="mermaid_desc"><b>You want her fish tail, she wants your legs!</b></string>
    <string name="clown_name"><b>Killer Clown</b></string>
    <string name="clown_desc"><b>Why aren\'t you allowed to incinerate clowns? They burn funny lol!</b></string>
    <string name="devil_name"><b>The Dreaded Devil</b></string>
    <string name="devil_desc"><b>Let\'s ask him if he wears Prada!</b></string>
    <string name="witch_name"><b>Winifred Sanderson</b></string>
    <string name="witch_desc"><b>Oh look, another glorious morning, makes me sick!</b></string>
    <string name="king_name"><b>King Julian</b></string>
    <string name="king_desc"><b>I\'m too sexy for my crown!</b></string>
    <string name="monster_name"><b>Sullivan</b></string>
    <string name="monster_desc"><b>You\'re in kindergarten, right? Oh, I love kindergarten, best three years of my life!</b></string>
    <string name="superhero_name"><b>Blue Tornado</b></string>
    <string name="superhero_desc"><b>Honey, where\'s my super suit?</b></string>
    <string name="harry_name"><b>Harry Potter</b></string>
    <string name="harry_desc"><b>The boy who lived! Beware, you may be the chosen one!</b></string>
    <string name="hermione_name"><b>Hermione Granger</b></string>
    <string name="hermione_desc"><b>A know-it all right? Maybe, bet you want to be like her!</b></string>
    <string name="snape_name"><b>Severus Snape</b></string>
    <string name="snape_desc"><b>The Half-Blood Prince, a good heart with a tough exterior.</b></string>
    <string name="voldemort_name"><b>Voldemort</b></string>
    <string name="voldemort_desc"><b>He-Who-Must-Not-Be-Named, he claims to be pure blood, but we all know the truth.</b></string>
    <string name="luna_name"><b>Luna Lovegood</b></string>
    <string name="luna_desc"><b>Don\'t worry, if you pick her, it means that you are just as sane as she is!</b></string>
    <string name="albus_name"><b>Albus Percival Wulfric Brian Dumbledore</b></string>
    <string name="albus_desc"><b>Do not pity the dead, young player. Pity the living, and, above all, those who live without love.</b></string>
    <string name="draco_name"><b>Draco Malfoy</b></string>
    <string name="draco_desc"><b>Sorry, but only pure-blood wizards can pick him (Muggles stay away!!!). He is a proud Slytherin and Harry Potter\'s arch rival.</b></string>
    <string name="hagrid_name"><b>Rubeus Hagrid</b></string>
    <string name="hagrid_desc"><b>He is our favorite half-giant! He loves all creatures and is a tirelessly loyal friend to Harry and Dumbledore.</b></string>
    <string name="c3po_name"><b>C-3PO</b></string>
    <string name="c3po_desc"><b>Artoo says that the chances of survival are 725 to 1. I bet we can win this time!</b></string>
    <string name="darthvader_name"><b>Darth Vader</b></string>
    <string name="darthvader_desc"><b>The force is with you, young Skywalker, but you are not a Jedi yet.</b></string>
    <string name="stormtrooper_name"><b>Stormtrooper</b></string>
    <string name="stormtrooper_desc"><b>Mi high combat effectiveness has been the main reason for deploying me almost exclusively in most of the military engagements of the Galactic Empire.</b></string>
    <string name="wookiee_name"><b>Chewbacca</b></string>
    <string name="wookiee_desc"><b>Uuuuuuuu Ahhhhrrrrr Uhrrrr Ahhhhhrrrr Aaaaarrggghhh</b></string>
    <string name="obiwan_name"><b>Obi-Wan Kenobi</b></string>
    <string name="obiwan_desc"><b>For now, be proud. You have survived an ordeal few your age could. Welcome home, young Jedi!</b></string>
    <string name="darthsidious_name"><b>Palpatine</b></string>
    <string name="darthsidious_desc"><b>My mentor taught me everything about the Force, even the nature of the dark side...</b></string>
    <string name="jabba_name"><b>Jabba the Hutt</b></string>
    <string name="jabba_desc"><b>A.K.A The Bloated. One of the most notorious Hutt crime lords in the galaxy!</b></string>
    <string name="leia_name"><b>Princess Leia</b></string>
    <string name="leia_desc"><b>Be patient. Be strong. Fight back where you can. The Imperial war machine falls apart one gear, one gun, one stormtrooper at a time. The New Republic is coming. And we want your help to finish the fight!</b></string>
    <string name="choose_character"><b>Choose character for Player</b></string>
    <string name="choose_character_1">1</string>
    <string name="button_choose_character">Pick Me!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="leave_app">Are you sure you want to leave us now? The current game will be lost!</string>
    <string name="current_player">%1$s is your turn!</string>
    <string name="next_player">Next Player: &#160;</string>
    <string name="winner">God save %1$s almighty king of Bead Me</string>
    <string name="pref_sound_text"><b>Sound</b></string>
    <string name="pref_vibration_text"><b>Vibration</b></string>
    <string name="pref_notification_text"><b>Notifications</b></string>
    <string name="pref_orientation_text"><b>Lock Orientation</b></string>
    <string name="pref_light_text"><b>Light</b></string>
    <string name="pref_players_text"><b>Players</b></string>
    <string name="pref_themes_text"><b>Theme</b></string>
    <string name="pref_bars_text"><b>Bars Configurations</b></string>
    <string name="pref_players_dialog_text">Please select the number of players</string>
    <string name="pref_themes_dialog_text">Please select a theme</string>
    <string name="pref_languages_dialog_text">Please select your language</string>
    <string name="pref_bars_dialog_text">You must enter 14 characters and only 0,1 or 2 are allowed, otherwise the values won\'t be saved.</string>
    <string name="notification_text">I found your lack of interest disturbing. Are you a zombie??? I think you\'re not, so come back and play!!!.</string>
    <string name="pref_vibration_default">true</string>
    <string name="pref_speaker_default">true</string>
    <string name="pref_notification_default">false</string>
    <string name="pref_orientation_default">false</string>
    <string name="pref_light_default">false</string>
    <string name="pref_players_default">2</string>
    <string name="pref_themes_default">PINK</string>
    <string name="pref_bars_default"/>
    <string-array name="players">
        <item>1 player</item>
        <item>2 players</item>
        <item>3 players</item>
        <item>4 players</item>
    </string-array>
    <string-array name="players_keys">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="themes">
        <item>On Wednesdays we wear PINK</item>
        <item>Star Wars</item>
        <item>Harry Potter</item>
    </string-array>
    <string-array name="themes_keys">
        <item>PINK</item>
        <item>CHEWBACCA</item>
        <item>EXPELLIARMUS</item>
    </string-array>
    <string name="stat_total_game_title"><b>How many times have you played?</b></string>
    <string name="stat_total_game_main"><b>%1$s</b></string>
    <string name="stat_total_game_extra">Are you kidding me??? I have faith on you, keep playing!</string>
    <string name="stat_top_players_title"><b>Hall of Fame</b></string>
    <string name="stat_first_name"><b>%1$s</b></string>
    <string name="stat_first_victories"><b>Victories: %1$s</b></string>
    <string name="stat_first_date"><b>Last play: %1$s</b></string>
    <string name="stat_second_name"><b>%1$s</b></string>
    <string name="stat_second_victories"><b>Victories: %1$s</b></string>
    <string name="stat_second_date"><b>Last play: %1$s</b></string>
    <string name="stat_third_name"><b>%1$s</b></string>
    <string name="stat_third_victories"><b>Victories: %1$s</b></string>
    <string name="stat_third_date"><b>Last play: %1$s</b></string>
    <string name="stat_bottom_players_title"><b>Hall of Shame</b></string>
    <string name="stat_worst_name"><b>%1$s</b></string>
    <string name="stat_worst_victories"><b>Defeats: %1$s</b></string>
    <string name="stat_worst_date"><b>Last play: %1$s</b></string>
    <string name="stat_worse_name"><b>%1$s</b></string>
    <string name="stat_worse_victories"><b>Defeats: %1$s</b></string>
    <string name="stat_worse_date"><b>Last play: %1$s</b></string>
    <string name="stat_bad_name"><b>%1$s</b></string>
    <string name="stat_bad_victories"><b>Defeats: %1$s</b></string>
    <string name="stat_bad_date"><b>Last play: %1$s</b></string>
    <string name="stat_avg_game_title"><b>How many rounds do you usually play?</b></string>
    <string name="stat_avg_game_main"><b>%1$s</b></string>
    <string name="hist_title"><b>Game History</b></string>
    <string name="hist_num_title"><b>#</b></string>
    <string name="hist_date_title"><b>Date</b></string>
    <string name="about_authors_title"><b>About the\n@uthors</b></string>
    <string name="author1"><b>\@cecibloom</b></string>
    <string name="author1_intro"><b>(vampire hunter wannabe)</b></string>
    <string name="author1_desc"><b>She enjoys long romantic walks to the fridge.</b></string>
    <string name="author2"><b>\@tatibloom</b></string>
    <string name="author2_intro"><b>(doctor\'s companion wannabe)</b></string>
    <string name="author2_desc"><b>She hates morning people ... and morning ... and people.</b></string>
    <string name="author3"><b>\@megireci</b></string>
    <string name="author3_desc"><b>She loves rice with yogurt, Milan and her boyfriend (in that order).</b></string>
    <string name="about_game_title"><b>About the\nG@me</b></string>
    <string name="about_game_text"><b>Bead Me!\nFinal project for\nMobile Applications\n15&#8211;16\n@PoliMi</b></string>
</resources>