<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <it.polimi.group03.util.SwitchPreference
        android:title="@string/pref_sound_text"
        android:key="key_sound"
        android:checked="true"
        style="?preference_speaker"
        android:defaultValue="@string/pref_speaker_default"
        android:order="1"/>

    <it.polimi.group03.util.SwitchPreference
        android:title="@string/pref_vibration_text"
        android:key="key_vibration"
        android:checked="true"
        style="?preference_vibration"
        android:defaultValue="@string/pref_vibration_default"
        android:order="2"/>

    <it.polimi.group03.util.SwitchPreference
        android:title="@string/pref_notification_text"
        android:key="key_notification"
        android:checked="false"
        style="?preference_notification"
        android:defaultValue="@string/pref_notification_default"
        android:order="3"/>

    <it.polimi.group03.util.SwitchPreference
        android:title="@string/pref_light_text"
        android:key="key_light"
        android:checked="true"
        style="?preference_light"
        android:defaultValue="@string/pref_light_default"
        android:order="4"/>

    <it.polimi.group03.util.ListPreference
        android:title="@string/pref_players_text"
        android:key="key_players"
        android:entries="@array/players"
        style="?preference_player"
        android:entryValues="@array/players_keys"
        android:defaultValue="@string/pref_players_default"
        android:dialogTitle="@string/pref_players_dialog_text"
        android:order="5"/>

    <it.polimi.group03.util.ListPreference
        android:title="@string/pref_themes_text"
        android:key="key_themes"
        android:entries="@array/themes"
        style="?preference_theme"
        android:entryValues="@array/themes_keys"
        android:defaultValue="@string/pref_themes_default"
        android:dialogTitle="@string/pref_themes_dialog_text"
        android:order="6"/>

    <it.polimi.group03.util.EditTextPreference
        android:title="@string/pref_bars_text"
        android:key="key_bars"
        style="?preference_bar"
        android:defaultValue="@string/pref_bars_default"
        android:dialogMessage="@string/pref_bars_dialog_text"
        android:order="7"/>

</PreferenceScreen>