<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_frame"
    style="?backgroundStyle"
    tools:context="it.polimi.group03.activity.AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_weight=".2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/about_icon"
                android:src="@drawable/img_app"
                android:contentDescription="@string/app_icon"
                android:layout_gravity="center|bottom" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView"
            android:layout_weight=".8">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="90"
                android:baselineAligned="false"
                android:measureWithLargestChild="false"
                android:gravity="center_vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="41"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_authors_title"
                        android:id="@+id/txt_authors"
                        android:textAlignment="center"
                        style="?aboutStyle"
                        android:textSize="30sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author1"
                        android:id="@+id/txt_cecibloom"
                        android:layout_gravity="center_horizontal"
                        style="?aboutStyle"
                        android:textSize="23sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author1_intro"
                        android:id="@+id/txt_cecibloom_intro"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:layout_gravity="center_horizontal"
                        style="?aboutStyle"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author1_desc"
                        android:id="@+id/txt_cecibloom_desc"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        style="?aboutStyle"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author2"
                        android:id="@+id/txt_tatibloom"
                        android:layout_gravity="center_horizontal"
                        style="?aboutStyle"
                        android:textSize="23sp"
                        android:textAlignment="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author2_intro"
                        android:id="@+id/txt_tatibloom_intro"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:layout_gravity="center_horizontal"
                        style="?aboutStyle"
                        android:textSize="12sp"
                        android:textIsSelectable="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author2_desc"
                        android:id="@+id/txt_tatibloom_desc"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        style="?aboutStyle"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author3"
                        android:id="@+id/txt_megireci"
                        android:layout_gravity="center_horizontal"
                        style="?aboutStyle"
                        android:textSize="23sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textAlignment="center" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author3_desc"
                        android:id="@+id/txt_megireci_desc"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        style="?aboutStyle"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:background="@color/black"
                    android:layout_weight="4">

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="45">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_game_title"
                        android:id="@+id/txt_game"
                        android:textAlignment="center"
                        style="?aboutStyle"
                        android:textSize="30sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                    <com.facebook.share.widget.LikeView
                        android:id="@+id/likeView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_game_text"
                        android:id="@+id/txt_game_desc"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        style="?aboutStyle"
                        android:textSize="16sp"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:layout_weight=".1"
            android:layout_marginTop="25dp">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_about_home"
                android:layout_gravity="center|bottom"
                android:contentDescription="@string/ic_home_desc"
                android:src="@drawable/ic_home"
                style="?floatingButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>