<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_frame"
    style="?backgroundStyle"
    tools:context="it.polimi.group03.activity.HomeActivity">

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right|center_vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|top"
                android:columnCount="1"
                android:rowCount="1"
                android:id="@+id/lyo_header"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/txt_home">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/img_app"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:src="@drawable/img_app"
                    android:contentDescription="@string/img_desc"
                    android:layout_gravity="center|bottom" />

            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_home"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_above="@+id/btn_play"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="56dp"
                style="?homeText"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_play_text"
                android:id="@+id/btn_play"
                style="?buttonStyles"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_play"
                android:drawablePadding="-35dp"
                android:textAlignment="center"
                android:paddingStart="35dp"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_statistics_text"
                android:id="@+id/btn_statistics"
                style="?buttonStyles"
                android:layout_marginTop="15dp"
                android:layout_alignStart="@+id/btn_play"
                android:layout_alignEnd="@+id/btn_play"
                android:drawableLeft="@drawable/ic_statistic"
                android:drawablePadding="-12dp"
                android:textAlignment="center"
                android:elegantTextHeight="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/btn_play"
                android:paddingStart="12dp"
                android:textColor="@color/white"/>

            <Button
                style="?buttonStyles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_history_text"
                android:id="@+id/btn_history"
                android:drawableLeft="@drawable/ic_history"
                android:drawablePadding="-20dp"
                android:textAlignment="center"
                android:elegantTextHeight="false"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:layout_below="@+id/btn_statistics"
                android:layout_alignStart="@+id/btn_statistics"
                android:layout_marginTop="15dp"
                android:layout_alignEnd="@+id/btn_statistics" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_settings_text"
                android:id="@+id/btn_settings"
                style="?buttonStyles"
                android:layout_below="@+id/btn_history"
                android:layout_alignEnd="@+id/btn_history"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="-16dp"
                android:textAlignment="center"
                android:contextClickable="false"
                android:layout_marginTop="15dp"
                android:layout_alignStart="@+id/btn_history"
                android:paddingStart="16dp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_help"
                style="?helpIconStyle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/img_desc" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_about"
                style="?aboutIconStyle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:contentDescription="@string/img_desc" />

        </RelativeLayout>

    </FrameLayout>

</FrameLayout>
